--- a/studyCS.csproj
+++ b/studyCS.csproj
@@ -36,7 +36,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="7.class\struct.cs" />
+    <None Include="7.class\struct.cs" />
     <Compile Include="8.interface_\interface1.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
