--- a/studyCS.csproj
+++ b/studyCS.csproj
@@ -36,6 +36,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="8.interface_\property.cs" />
     <None Include="7.class\struct.cs" />
     <Compile Include="8.interface_\interface1.cs" />
   </ItemGroup>
